--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering :: Image Processing
 project_urls =
     Bug Tracker = https://github.com/jni/napari-defdap/issues
@@ -34,6 +35,8 @@ install_requires =
     numpy
     magicgui
     qtpy
+    defdap
+    napari-matplotlib
 
 python_requires = >=3.8
 include_package_data = True
