--- a/src/napari_defdap/napari.yaml
+++ b/src/napari_defdap/napari.yaml
@@ -8,15 +8,9 @@ contributions:
     - id: napari-defdap.make_sample_data
       python_name: napari_defdap._sample_data:make_sample_data
       title: Load sample data from DefDAP napari plugin
-    - id: napari-defdap.make_qwidget
-      python_name: napari_defdap._widget:ExampleQWidget
+    - id: napari-defdap.grainplots
+      python_name: napari_defdap._widget:GrainPlots
       title: Make example QWidget
-    - id: napari-defdap.make_magic_widget
-      python_name: napari_defdap._widget:example_magic_widget
-      title: Make example magic widget
-    - id: napari-defdap.make_func_widget
-      python_name: napari_defdap._widget:example_function_widget
-      title: Make example function widget
   readers:
     - command: napari-defdap.get_reader
       accepts_directories: false
@@ -26,10 +20,5 @@ contributions:
       display_name: DefDAP napari plugin
       key: unique_id.1
   widgets:
-    - command: napari-defdap.make_qwidget
-      display_name: Example QWidget
-    - command: napari-defdap.make_magic_widget
-      display_name: Example Magic Widget
-    - command: napari-defdap.make_func_widget
-      autogenerate: true
-      display_name: Example Function Widget
+    - command: napari-defdap.grainplots
+      display_name: Grain Plots
