Use defdap from develop

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     numpy
     magicgui
     qtpy
-    defdap
+    defdap @ git+https://github.com/MechMicroMan/DefDAP.git@develop
     napari-matplotlib
     trackpy
 
