--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,6 @@ install_requires =
     magicgui
     qtpy
     defdap @ git+https://github.com/MechMicroMan/DefDAP.git@develop
-    napari-matplotlib
     trackpy
 
 python_requires = >=3.10
@@ -60,6 +59,9 @@ testing =
     pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
     napari
     pyqt5
+
+mpl =
+    napari-matplotlib
 
 
 [options.package_data]
