Add widget to focus on specific tracks (#4)
This PR adds a new widget to the plugin that allows the user to select a layer
and a track ID, and sets the viewer camera center on that specific track.

Note: the tracks layer must have a features dataframe with the following
columns for this to work: track_id, t, y, x. See the update to the example
script to see how to do this.

* Add widget for setting focus on specific track
* Add widget to napari manifest
* bug fix: fix napari manifest syntax
* Add track features to example
* bugfix: add trackpy to dependencies
* bugfix: fix dataframe indexing call
* bugfix: fix types when checking current timepoint
* Bugfix: use correct layer scale
* bugfix: specify step=1 for int spinbox
  default is adaptive, see https://pyapp-kit.github.io/magicgui/api/widgets/SpinBox/#magicgui.widgets.SpinBox:
  >  step (float, default: Undefined ) –
  The step size for incrementing the value, by default adaptive step is used
* Use defdap from develop
* Add test for track focus, remove irrelevant tests
* tracks -> tracks_layer test bugfix
* Use Python > 3.10; only test highest and lowest version
* Add features to tracks layer
* camera center is n-dimensional
* Add widget to qtbot fixture
* Add magicgui widget with .native
* Move napari-matplotlib to optional dependency to avoid 0.5 pin
* Make napari-mpl actually optional

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,10 +18,9 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Topic :: Scientific/Engineering :: Image Processing
 project_urls =
     Bug Tracker = https://github.com/jni/napari-defdap/issues
@@ -35,10 +34,10 @@ install_requires =
     numpy
     magicgui
     qtpy
-    defdap
-    napari-matplotlib
+    defdap @ git+https://github.com/MechMicroMan/DefDAP.git@develop
+    trackpy
 
-python_requires = >=3.8
+python_requires = >=3.10
 include_package_data = True
 package_dir =
     =src
@@ -60,6 +59,9 @@ testing =
     pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
     napari
     pyqt5
+
+mpl =
+    napari-matplotlib
 
 
 [options.package_data]
