--- a/src/napari_defdap/napari.yaml
+++ b/src/napari_defdap/napari.yaml
@@ -11,6 +11,9 @@ contributions:
     - id: napari-defdap.grainplots
       python_name: napari_defdap._widget:GrainPlots
       title: Make example QWidget
+    - id: napari-defdap.track_focus
+      python_name: napari_defdap._track_focus:set_track_focus
+      title: Set Track Focus
   readers:
     - command: napari-defdap.get_reader
       accepts_directories: false
@@ -22,3 +25,5 @@ contributions:
   widgets:
     - command: napari-defdap.grainplots
       display_name: Grain Plots
+    - command: napari-defdap.track_focus
+      display_name: Set Track Focus
